err/cloudshell-octopus-deploy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cloudshell'...
Listing './lib/python3.5/site-packages/cloudshell/api'...
Compiling './lib/python3.5/site-packages/cloudshell/api/common_cloudshell_api.py'...
***   File "./lib/python3.5/site-packages/cloudshell/api/common_cloudshell_api.py", line 121
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cloudshell/doc'...
Listing './lib/python3.5/site-packages/cloudshell/doc/_modules'...
Listing './lib/python3.5/site-packages/cloudshell/doc/_modules/cloudshell'...
Listing './lib/python3.5/site-packages/cloudshell/doc/_modules/cloudshell/api'...
Listing './lib/python3.5/site-packages/cloudshell/doc/_sources'...
Listing './lib/python3.5/site-packages/cloudshell/doc/_static'...
Listing './lib/python3.5/site-packages/cloudshell/doc/_static/css'...
Listing './lib/python3.5/site-packages/cloudshell/doc/_static/fonts'...
Listing './lib/python3.5/site-packages/cloudshell/doc/_static/js'...
Listing './lib/python3.5/site-packages/cloudshell/helpers'...
Listing './lib/python3.5/site-packages/cloudshell/helpers/scripts'...
Compiling './lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py'...
***   File "./lib/python3.5/site-packages/cloudshell/helpers/scripts/cloudshell_dev_helpers.py", line 106
    print 'No config file found at:', filename
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cloudshell/octopus'...
Listing './lib/python3.5/site-packages/cloudshell_automation_api-7.1.0.519.egg-info'...
Listing './lib/python3.5/site-packages/cloudshell_octopus_deploy-4.1.94.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.11.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
